# Library

./: .env  Dockerfile  README.md  csv_book.txt  docker-compose.yml  pyproject.toml
core/: admin.py  api.py  apps.py  models.py  serializers.py  tasks.py  urls.py
core/migrations/: 0001_initial.py  0002_rename_authors_book_author.py  0003_order.py  0004_alter_order_status.py  0005_order_to_change.py  0006_order_mod_after_created.py
core/service/: permissions.py  signals.py
core/utils/file_parsers/: csv_parser.py
docker_commands/: celery.sh  gunicorn.sh
fixtures/: db.json
settings/: __init__.py  celery.py  settings.py  urls.py
